<resources>
    <string name="app_name">YOLOv8</string>
    <string name="image_view">Image View</string>
    <string name="detect">Detect</string>
    <string name="run_model">Running the model...</string>
    <string name="restart">Restart</string>
    <string name="select">Select</string>
    <string name="live">Live</string>
    <string name="chooseImage">Test Image 1/5</string>
    <string-array name="runtime_array">
        <item>Onnx</item>
        <item>PyTorch</item>
        <item>TFLite</item>
        <item>SSD_TFLITE</item>
        <item>SSD_TFLITE640</item>
    </string-array>
</resources>