<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yolov8detect.MainActivity"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="-1dp">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/image_view"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.yolov8detect.ResultView
        android:id="@+id/resultView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nmsLimitText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="40dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confidenceText"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/runtimeSelector"
        android:layout_width="121dp"
        android:layout_height="63dp"
        android:layout_marginEnd="6dp"
        app:layout_constraintBottom_toTopOf="@+id/testButton"
        app:layout_constraintEnd_toStartOf="@+id/detectButton"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.622" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="Confidence"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectButton" />

    <Button
        android:id="@+id/selectButton"
        android:layout_width="89dp"
        android:layout_height="59dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="4dp"
        android:text="@string/select"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/seekBarConfidence"
        app:layout_constraintStart_toEndOf="@+id/testButton"
        app:layout_constraintTop_toBottomOf="@+id/detectButton"
        app:layout_constraintVertical_bias="0.31" />

    <Button
        android:id="@+id/detectButton"
        android:layout_width="151dp"
        android:layout_height="57dp"
        android:layout_marginTop="44dp"
        android:text="@string/detect"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/testButton"
        android:layout_width="142dp"
        android:layout_height="62dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/chooseImage"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detectButton"
        app:layout_constraintVertical_bias="0.34" />

    <TextView
        android:id="@+id/confidenceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.851"
        app:layout_constraintStart_toEndOf="@+id/seekBarConfidence"
        app:layout_constraintTop_toBottomOf="@+id/liveButton" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="73dp"
        android:layout_height="17dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:text="NMS Limit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/seekBarNMSLimit"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/liveButton"
        android:layout_width="91dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:text="@string/live"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toEndOf="@+id/selectButton"
        app:layout_constraintTop_toBottomOf="@+id/detectButton" />

    <SeekBar
        android:id="@+id/seekBarConfidence"
        android:layout_width="186dp"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        app:layout_constraintBottom_toTopOf="@+id/nmsLimitText"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/liveButton"
        app:layout_constraintVertical_bias="0.0" />

    <SeekBar
        android:id="@+id/seekBarNMSLimit"
        android:layout_width="186dp"
        android:layout_height="21dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/nmsLimitText"
        app:layout_constraintTop_toBottomOf="@+id/seekBarConfidence"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>